# task_manager

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/controller/: mod.rs  sign_in.rs
src/db/: db_struct.rs  mod.rs
src/routes/: add_task.rs  delete_task.rs  edit_task.rs  jwt_middleware.rs  mod.rs  send_task.rs  sign_in_routes.rs  sign_up_routes.rs
